--- a/src/main/webapp/app/templates/userHome.html
+++ b/src/main/webapp/app/templates/userHome.html
@@ -1,25 +1,36 @@
-<section>
-      <div class="row">
-        <div class="col-xs-12"> <img src="images/bannerImage.jpg" class="img-responsive" alt=""/> </div>
+<div class="MainContainer" id="MainContainer">
+
+    <div class="row">
+   		<div class="col-sm-12">
+        	 <ol class="breadcrumb">
+              <li><a href="default.html">Home</a></li>
+              <li class="active">My Page</li>
+            </ol>
+        </div>
+	</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">My Page</div>
       </div>
-      <div class="row marginTop20">
-        <div class="col-xs-12 h1 txtBlue ">My Page</div>
-      </div>
-      <div class="row">
-      	<div class="col-sm-3 leftNav"><!--Left Nav-->
+      <div class="row marginTop10">
+        <div class="col-sm-3 leftNav"><!--Left Nav-->
         <div class="row">
         <div class="col-xs-12">
           <ul class="nav nav-pills tabPills  nav-stacked">
             <li class="active"><a href="MyApplication.html">My Page</a></li>
             <li><a href="ManageProfile-Step1.html">Manage Profile</a></li>
-            <li><a href="childResidentialFacility.html">Child Residential Facility</a></li>
-			<li><a href="fosterCareAgency.html">Foster Care Agency</a></li>
+            <li><a href="childResidentialFacility.html">Lookup Child Residential Facilities</a></li>
+			<li><a href="fosterCareAgency.html">Lookup  Foster Care Agencies</a></li>
 <li><a href="inbox.html">Inbox</a></li>
           </ul>
         </div>
       </div>
         </div>
         <div class="col-sm-9 rightSection">
+
+
+
+
+
 
       <div class="form-horizontal marginTop20">
 
@@ -33,68 +44,23 @@
 
 		</div>
 
-		<div class="table-responsive">
-			<table class="table table-striped table-bordered">
-				<thead>
-					<tr>
-					<th>Case ID</th>
-					<th>Status</th>
-					<th>Case Name</th>
-					<th>Contact Detail</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>Inprogress</td>
-						<td>Otto</td>
-						<td>@mdo</td>
-					</tr>
 
-				</tbody>
-			</table>
-		</div>
 
       </div>
-      <!-- /.form-horizontal --></div>
+      <!-- /.form-horizontal -->
+        <div class="row">
+      	<div class="col-sm-6 col-md-3 marginTop20"><a href="javascript:void(0)"><img src="./contents/images/lookForChildProfile.jpg" width="266" height="265" alt="" class="img-responsive marginAuto "/></a></div>
+		<div class="col-sm-6 col-md-3 marginTop20"><a href="javascript:void(0)"><img src="./contents/images/fosterParentingLibrary.jpg" width="266" height="265" alt="" class="img-responsive marginAuto "/></a></div>
+      	<div class="col-sm-6 col-md-3 marginTop20"><a href="javascript:void(0)"><img src="./contents/images/trainingVideos.jpg" width="266" height="265" alt="" class="img-responsive marginAuto"/></a></div>
+		<div class="col-sm-6 col-md-3 marginTop20"><a href="javascript:void(0)"><img src="./contents/images/stateFosterCareInfor.jpg" width="266" height="265" alt="" class="img-responsive marginAuto "/></a></div>
+      </div>
+
+      </div>
 
       </div>
 
 
-      <div class="row lightGrayBG marginTop20">
-        <div class="col-md-10 col-md-offset-1">
-          <div class="row marginTop10">
-            <div class="col-md-12 text-center">
-              <h2 class="txtBlue">GET IN TOUCH</h2>
-              <div class="text-center"><img src="images/h-separator.png" border="0" /></div>
-              <h4>California Health and Human Services 1600 Ninth Street, Room 460 Sacramento, CA 95814</h4>
-            </div>
-          </div>
-          <!-- /.row -->
-          <div class="row marginTop10">
-            <div class="col-sm-5">
-              <input type="text" class="form-control marginBottom10" placeholder="Your Name*">
-            </div>
-            <div class="col-sm-5">
-              <input type="text" class="form-control marginBottom10" placeholder="Your Email*">
-            </div>
-            <div class="col-sm-2">
-              <input type="text" class="form-control marginBottom10" placeholder="Mobile">
-            </div>
-          </div>
-          <!-- /.row -->
-          <div class="row marginTop10">
-            <div class="col-sm-12">
-              <textarea type="text" class="form-control" placeholder="Your Query*"></textarea>
-            </div>
-          </div>
-          <!-- /.row -->
-          <div class="row marginTop10 marginBottom10">
-            <div class="col-sm-12 text-center">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </div>
-          <!-- /.row -->
-        </div>
-      </div>
+
     </section>
+  </div>
+  <main-script></main-script>
