--- a/src/main/webapp/app/templates/footer.html
+++ b/src/main/webapp/app/templates/footer.html
@@ -1,49 +1,15 @@
-<section>
-  <div class="row ">
-      <div class="col-md-10 col-md-offset-1">
-     <div class="row marginTop10">
-      <div class="col-md-12 text-center">
-      <h2 class="txtBlue">GET IN TOUCH</h2>
-      <div class="text-center"><img src="contents/images/h-separator.png" border="0" /></div>
-      <h4>California Health and Human Services 1600 Ninth Street, Room 460 Sacramento, CA 95814</h4>
-      </div>
-     </div><!-- /.row -->
-     <div class="row marginTop10">
-      <div class="col-sm-5">
-              <input type="text" class="form-control marginBottom10" placeholder="Your Name*">
-            </div>
-            <div class="col-sm-5">
-              <input type="text" class="form-control marginBottom10" placeholder="Your Email*">
-            </div>
-            <div class="col-sm-2">
-              <input type="text" class="form-control marginBottom10" placeholder="Mobile">
-            </div>
-    </div><!-- /.row -->
-    <div class="row marginTop10">
-      <div class="col-sm-12">
-      <textarea type="text" class="form-control" placeholder="Your Query*"></textarea>
-      </div>
-    </div><!-- /.row -->
-    <div class="row marginTop10 marginBottom10">
-      <div class="col-sm-12 text-center">
-      <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
-    </div><!-- /.row -->
-    </div>
-    </div>
-</section>
 <footer class="footer marginTop12">
     <div class="container">
-    <div class="row">
-      <ul class="footerLinks">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Google+</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">GitHub</a></li>
-<li><a href="#">Report Tech Issue</a></li>
+		<div class="row">
+			<ul class="footerLinks">
+        <li><a href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="javascript:void(0)" title="Google+"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="javascript:void(0)" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="javascript:void(0)" title="GitHub"><i class="fa fa-github"></i></a></li>
+        <li class="pull-right"><a href="javascript:void(0)">Report Tech Issue</a></li>
       </ul>
 
-    </div>
-  </div>
+		</div>
+	</div>
 </footer>
