--- a/src/main/webapp/app/templates/loginControl.html
+++ b/src/main/webapp/app/templates/loginControl.html
@@ -13,8 +13,8 @@
         </li>
       </ul>
     </li>
-    <li><a href="#">Help</a></li>
-    <li><a ng-link="#">About Us</a></li>
+    <li><a href="javascript:void(0)">Help</a></li>
+    <li><a href="javascript:void(0)">About Us</a></li>
   </ul>
 </div>
 
