--- a/src/main/webapp/app/templates/main.html
+++ b/src/main/webapp/app/templates/main.html
@@ -1,49 +1,96 @@
-<header>
-     <div class="row">
-       <div class="col-xs-12 col-sm-3 col-md-2"><a href="#/"><img src="contents/images/logo.png" class="img-responsive logo" alt=""/></a></div>
-       <div class="col-xs-12 col-sm-9 col-md-10"><!--Navigation-->
-          <login-control></login-control>
-         <div class="topNavigation">
-           <nav class="navbar navbar-default">
+<header class="navbar-fixed-top">
+	<div class="container whitebg">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3 col-md-2"><a href="#/"><img src="./contents/images/logo.png" class="img-responsive logo" alt=""/></a></div>
+        <div class="col-xs-12 col-sm-9 col-md-10"><!--Navigation-->
+          <div class="text-right" id="loginNavContainer">
+            <ul class="loginNav" id="loginNav">
+              <li class="dropdown login" role="presentation"> <a aria-expanded="false" aria-haspopup="true" role="button" href="#" data-toggle="dropdown" class="dropdown-toggle login">Login</a>
+                <ul class="dropdown-menu">
+                  <li>
+                  	<span class="glyphicon glyphicon-user loginboxUsericon"></span>
+                    <div class="userLoginBox form-group">
+                            <input type="text" class="form-control txtBoxLoginBox" placeholder="Username" value="Username" onFocus="if(this.value=='Username')this.value=''" onBlur="if(this.value=='')this.value='Username'">
+                            <input type="password" class="form-control txtBoxLoginBox marginTop10" placeholder="Password" value="Password" onFocus="if(this.value=='Password')this.value=''" onBlur="if(this.value=='')this.value='Password'">
+                            <button type="submit" class="btn btn-primary btn-search  marginTop10" onclick="location.href='MyApplication.html'">LOGIN</button> <a href="javascript:void(0)" class="forgotPwd">Forgot Password?</a>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+              <li><a href="javascript:void(0)">Help</a></li>
+              <li><a href="javascript:void(0)">About Us</a></li>
+            </ul>
+          </div>
+          <div class="topNavigation">
+            <nav class="navbar navbar-default navbar-right">
 
-             <!-- Brand and toggle get grouped for better mobile display -->
-             <div class="navbar-header">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-             </div>
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+              </div>
 
-             <!-- Collect the nav links, forms, and other content for toggling -->
-             <div class="collapse navbar-collapse" id="bs-navbar">
-               <ul class="nav navbar-nav">
-                 <li class="active"><a ng-link="['Home']">Home</a></li>
-                 <li><a ng-link="['About']">About Us</a></li>
-                 <li><a ng-link="['List']">For Families</a></li>
-                 <li><a href="#">Training</a></li>
-                 <li><a href="#">Contact Us</a></li>
-                 <li class="dropdown searchBoxContainer" role="presentation"><a aria-expanded="false" aria-haspopup="true" role="button" href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="glyphicon glyphicon-search"></i></a>
-               <ul class="dropdown-menu">
-                 <li class="userSearchBox">
-                   <div class="form-group form-inline">
-                           <input type="text" class="form-control" placeholder="Search"/>
-                           <button type="submit" class="btn btn-primary btn-search"><i class="glyphicon glyphicon-search"></i> SEARCH</button>
-                   </div>
-                 </li>
-               </ul>
-             </li>
-               </ul>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-navbar">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a ng-link="['Home']">Home</a></li>
+                   <li class="dropdown">
+                      <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
+                      <ul class="dropdown-menu navbar-leftAlign">
+                        <li><a href="javascript:void(0)">Our Services</a></li>
+                        <li><a href="javascript:void(0)">News &amp; Announcements</a></li>
+                      </ul>
+                    </li>
+                   <li class="dropdown">
+                      <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">For Families <b class="caret"></b></a>
+                      <ul class="dropdown-menu navbar-leftAlign">
+                        <li><a href="javascript:void(0)">Family Registration	</a></li>
+                        <li><a href="javascript:void(0)">Eligibility Criteria	</a></li>
+                        <li><a href="javascript:void(0)">Foster Parenting Guidelines	</a></li>
+                        <li><a href="javascript:void(0)">Registration Process</a></li>
+                        <li><a href="javascript:void(0)">FAQ</a></li>
+                      </ul>
+                    </li>
+                   <li class="dropdown">
+                      <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Foster Families Alumini <b class="caret"></b></a>
+                      <ul class="dropdown-menu navbar-leftAlign">
+                        <li><a href="javascript:void(0)">Our Network</a></li>
+                        <li><a href="javascript:void(0)">Success Stories</a></li>
+                        <li><a href="javascript:void(0)">Foster Parenting Tips</a></li>
+                      </ul>
+                    </li>
+                     <li class="dropdown">
+                      <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Talk to Us <b class="caret"></b></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="javascript:void(0)">Contact a Case Worker</a></li>
+                        <li><a href="javascript:void(0)">Contact Us</a></li>
+                      </ul>
+                    </li>
+                  <li class="dropdown searchBoxContainer" role="presentation"><a aria-expanded="false" aria-haspopup="true" role="button" href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="glyphicon glyphicon-search"></i></a>
+                <ul class="dropdown-menu">
+                  <li class="userSearchBox">
+                    <div class="form-group form-inline">
+                            <input type="text" class="form-control" placeholder="Search"/>
+                            <button type="submit" class="btn btn-primary btn-search"><i class="glyphicon glyphicon-search"></i> SEARCH</button>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+                </ul>
 
-               <span id="loginBoxNewPosition">
+                <span id="loginBoxNewPosition">
 
-               </span>
-             </div>
-             <!-- /.navbar-collapse -->
+                </span>
+              </div>
+              <!-- /.navbar-collapse -->
 
-           </nav>
-         </div>
-       </div>
-       <!--/Navigation-->
-     </div>
-   </header>
+            </nav>
+          </div>
+        </div>
+        <!--/Navigation-->
+      </div>
+      </div>
+</header>
+<div class="container whitebg">
 
-<div class="container">
     <ng-outlet></ng-outlet>
-</div>
+  </div>
