Updated login process and added validations in registration

--- a/src/main/webapp/app/templates/familyRegistrationProfileStep3.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileStep3.html
@@ -20,7 +20,7 @@
                     <li><a href="javascript:void(0);">Account Detail</a></li>
                     <li><a href="javascript:void(0);">Personal Information</a></li>
                     <li class="active"><a href="javascript:void(0);">Family Narrative &amp; Preferences</a></li>
-                    <li><a ng-link="['FamilyRegistrationProfileStep4']">License &amp; Agency Detail</a></li>
+                    <li><a href="javascript:void(0)">License &amp; Agency Detail</a></li>
                 </ul>
             </div>
         </div>
