--- a/src/main/webapp/app/templates/familyRegistrationProfile.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfile.html
@@ -22,9 +22,9 @@
             <div class="col-xs-12">
                 <ul class="nav nav-pills nav-justified tabPills">
                     <li class="active"><a href="javascript:void(0)">Account Detail</a></li>
-                    <li><a ng-link="['FamilyRegistrationProfileStep2']">Personal Information</a></li>
-                    <li><a ng-link="['FamilyRegistrationProfileStep3']">Family Narrative &amp; Preferences</a></li>
-                    <li><a ng-link="['FamilyRegistrationProfileStep4']">License &amp; Agency Detail</a></li>
+                    <li><a href="javascript:void(0)">Personal Information</a></li>
+                    <li><a href="javascript:void(0)">Family Narrative &amp; Preferences</a></li>
+                    <li><a href="javascript:void(0)">License &amp; Agency Detail</a></li>
                 </ul>
             </div>
         </div>
@@ -56,7 +56,7 @@
 
                             </div>
                         </div>
-                        <div class="form-group required" ng-class="{ 'has-error' : registrationForm1.confirmPassword.$invalid && !registrationForm1.confirmPassword.$pristine }">
+                        <div class="form-group required" ng-class="{ 'has-error' : (registrationForm1.confirmPassword.$invalid && !registrationForm1.confirmPassword.$pristine || (model.personalProfile.password != model.confirmPassword))}">
                             <label for="confirmPassword" class="control-label col-sm-4 paddingTop7">Confirm Password</label>
                             <div class="col-sm-6">
                                 <input class="form-control" type="password" name="confirmPassword" ng-model="model.confirmPassword" required>
