--- a/src/main/webapp/app/templates/familyRegistrationProfileStep2.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileStep2.html
@@ -108,24 +108,24 @@
 
                     <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Race</label>
                     <div class="col-sm-3">
-                        <select class="form-control">
-                            <option>Select</option>
-                        </select>
+                      <select name="ddl_races" class="form-control" ng-model="model.personalDetails.spouseDetails.race" ng-options="race.Name as race.Name for race in model.racesData">
+                          <option value="">Select</option>
+                      </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Religion</label>
                     <div class="col-sm-3">
-                        <select class="form-control">
-                            <option>Select</option>
-                        </select>
+                      <select name="ddl_religion" class="form-control" ng-model="model.personalDetails.spouseDetails.religion" ng-options="religion.Name as religion.Name for religion in model.religionData">
+                          <option value="">Select</option>
+                      </select>
                     </div>
 
                     <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Choose your Preferences</label>
                     <div class="col-sm-3">
-                        <select class="form-control">
-                            <option>Select</option>
-                        </select>
+                      <select name="ddl_preferences" class="form-control" ng-model="model.personalDetails.spouseDetails.preference" ng-options="preference.Name as preference.Name for preference in model.preferencesData">
+                          <option value="">Select</option>
+                      </select>
                     </div>
                 </div>
                 <div class="form-group">
@@ -169,24 +169,24 @@
         <div class="form-group">
             <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Race</label>
             <div class="col-sm-3">
-                <select class="form-control">
-                    <option>Select</option>
-                </select>
+              <select name="ddl_races1" class="form-control" ng-model="model.personalDetails.race" ng-options="race.Name as race.Name for race in model.racesData">
+                  <option value="">Select</option>
+              </select>
             </div>
 
             <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Religion</label>
             <div class="col-sm-3">
-                <select class="form-control">
-                    <option>Select</option>
-                </select>
+              <select name="ddl_religion1" class="form-control" ng-model="model.personalDetails.religion" ng-options="religion.Name as religion.Name for religion in model.religionData">
+                  <option value="">Select</option>
+              </select>
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Choose your Preferences</label>
             <div class="col-sm-3">
-                <select class="form-control">
-                    <option>Select</option>
-                </select>
+              <select name="ddl_preferences1" class="form-control" ng-model="model.personalDetails.preference" ng-options="preference.Name as preference.Name for preference in model.preferencesData">
+                  <option value="">Select</option>
+              </select>
             </div>
 
             <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Occupation</label>
