Registration process, Search functionality completed

--- a/src/main/webapp/app/templates/familyRegistrationEligibility.html
+++ b/src/main/webapp/app/templates/familyRegistrationEligibility.html
@@ -4,7 +4,7 @@
    		<div class="col-sm-12">
         	 <ol class="breadcrumb">
               <li><a href="#/">Home</a></li>
-              <li><a href="javascript:void(0)">Register Profile</a></li>
+              <li><a href="javascript:void(0)">Establish Profile</a></li>
               <li class="active">Eligibility Criteria</li>
             </ol>
         </div>
