--- a/src/main/webapp/app/templates/familyRegistrationProfileThankYou.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileThankYou.html
@@ -2,8 +2,8 @@
     <div class="row">
    		<div class="col-sm-12">
         	 <ol class="breadcrumb">
-             <li><a href="default.html">Home</a></li>
-              <li><a href="default.html">Register Profile</a></li>
+             <li><a href="javascript:void(0)">Home</a></li>
+              <li><a href="javascript:void(0)">Establish Profile</a></li>
                <li class="active">Thank You</li>
             </ol>
         </div>
@@ -23,9 +23,13 @@
       </div>
       <div class="alert alert-warning marginTop20">
 
-                                <p class="text-center font1dot3em">Thank you for registering with Us. Your effort to become foster parent is highly appreciated your application is under verification.<br/>Our team will contact you soon. You would shortly receive an email from us.</p><br/>
-                                <p class="text-center marginTop20"><button type="submit" class="btn btn-primary" ng-click="model.GotoThankYou()"><i class="glyphicon glyphicon-home"></i> My Page</button></p>
-                </div>
+        <p class="text-center font1dot3em">Thank you for registering with Us. Your effort to become foster parent is highly appreciated your application is under verification.<br/>Our team will contact you soon. You would shortly receive an email from us.</p><br/>
+        <p class="text-center marginTop20">
+          <button type="button" class="btn btn-primary" ng-click="model.GotoMyPage()">
+            <i class="glyphicon glyphicon-home"></i> My Page
+          </button>
+         </p>
+      </div>
 
 
 
