--- a/src/main/webapp/app/templates/loginControl.html
+++ b/src/main/webapp/app/templates/loginControl.html
@@ -24,6 +24,6 @@
      <li class="login hidden-xs" role="presentation"> <a class="login">Welcome {{model.fullName}}</a> </li>
      <li><a href="#">Help</a></li>
      <li><a href="#">About Us</a></li>
-     <li><a ng-click="model.logout()">Logout</a></li>
+     <li><a ng-click="model.logout()" class="cursorHand">Logout</a></li>
    </ul>
  </div>
