--- a/src/main/webapp/app/templates/main.html
+++ b/src/main/webapp/app/templates/main.html
@@ -28,7 +28,7 @@
                    <li class="dropdown">
                       <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">For Families <b class="caret"></b></a>
                       <ul class="dropdown-menu navbar-leftAlign">
-                        <li><a href="javascript:void(0)">Family Registration	</a></li>
+                        <li><a ng-link="['FamilyRegistration', 'FamilyRegistrationEligibility']">Family Registration	</a></li>
                         <li><a href="javascript:void(0)">Eligibility Criteria	</a></li>
                         <li><a href="javascript:void(0)">Foster Parenting Guidelines	</a></li>
                         <li><a href="javascript:void(0)">Registration Process</a></li>
