--- a/src/main/webapp/app/templates/familyRegistrationProfile.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfile.html
@@ -3,14 +3,14 @@
         <div class="col-sm-12">
             <ol class="breadcrumb">
                 <li><a href="#/">Home</a></li>
-                <li><a href="javascript:void(0)">Register Profile</a></li>
+                <li><a href="javascript:void(0)">Establish Profile</a></li>
                 <li class="active">Account Detail</li>
             </ol>
         </div>
     </div>
     <section>
         <div class="row marginTop7 lightGrayBG">
-            <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Register Profile</div>
+            <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Establish Profile</div>
             <div class="col-xs-12 col-sm-6 txtBlue font1dot5em">
                 <span class="stepCount">Step
             <span class="badge alert-info font1em">1</span> of
