--- a/src/main/webapp/app/templates/familyRegistrationProfileStep2.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileStep2.html
@@ -4,14 +4,14 @@
         <div class="col-sm-12">
             <ol class="breadcrumb">
                 <li><a href="#/">Home</a></li>
-                <li><a href="javascript:void(0)">Register Profile</a></li>
+                <li><a href="javascript:void(0)">Establish Profile</a></li>
                 <li class="active">Personal Information</li>
             </ol>
         </div>
     </div>
     <section>
         <div class="row marginTop7 lightGrayBG">
-            <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Register Profile</div>
+            <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Establish Profile</div>
             <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">2</span> of <span class="badge alert-info font1em">4</span></span></div>
     </div>
 
@@ -52,7 +52,7 @@
 
             <label class="col-sm-2 control-label">Date of Birth</label>
             <div class="col-sm-3 " ng-class="{ 'has-error' : registrationForm2.dob.$invalid && !registrationForm2.dob.$pristine }">
-                <div class="input-append date form-control datepicker" id="dp3" data-date-format="dd-mm-yyyy">
+                <div class="input-append date form-control datepicker" id="dp3" data-date-format="mm/dd/yyyy">
                     <input class="span2" size="16" type="text" value="" name="dob" ng-model="model.personalDetails.dob" required>
                     <span ng-show="registrationForm2.dob.$invalid && !registrationForm2.dob.$pristine" class="help-block"> Date of birth required.</span>
                     <span class="add-on"><i class="icon-th"></i></span>
@@ -64,8 +64,8 @@
             <div class="col-sm-3">
                 <select class="form-control" id="genderSelector">
                     <option value="">Select</option>
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
                 </select>
             </div>
 
@@ -75,7 +75,6 @@
                     <option value="status">Select Status</option>
                     <option value="single">Single</option>
                     <option value="Married">Married</option>
-                    <option value="Divorced">Divorced</option>
                 </select>
             </div>
         </div>
@@ -100,7 +99,7 @@
                 <div class="form-group ">
                     <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Spouse DOB</label>
                     <div class="col-sm-3">
-                        <div class="input-append date form-control datepicker" id="dp3" data-date-format="dd-mm-yyyy">
+                        <div class="input-append date form-control datepicker" id="dp3" data-date-format="mm/dd/yyyy">
                             <input class="span2 " size="16" type="text" name="spouseDOB" ng-model="model.personalDetails.spouseDetails.dob">
                             <span class="add-on"><i class="icon-th"></i></span>
                         </div>
@@ -133,8 +132,8 @@
                     <div class="col-sm-3">
                         <select class="form-control" id="spouseGenderSelector">
                             <option value="">Select</option>
-                            <option value="Male">Male</option>
-                            <option value="Female">Female</option>
+                            <option value="M">Male</option>
+                            <option value="F">Female</option>
                         </select>
                     </div>
 
