--- a/src/main/webapp/app/templates/userHomeRoot.html
+++ b/src/main/webapp/app/templates/userHomeRoot.html
@@ -4,7 +4,7 @@
         <div class="col-sm-12">
             <ol class="breadcrumb">
                 <li><a href="javascript:void(0)">Home</a></li>
-                <li class="active">My Page</li>
+                <li class="active">{{model.breadCrumText}}</li>
             </ol>
         </div>
     </div>
